salesforce/force-app/main/default/objects/Account/fields/Cooperation_Status__c.field-meta.xml
<CustomField>
    <fullName>Cooperation_Status__c</fullName>
    <label>Cooperation Status</label>
    <type>Text</type>
    <length>100</length>
    <description>Maps to Zoho Accounts.Cooperation_Status (e.g. Key client, Prospect).</description>
</CustomField>