salesforce/force-app/main/default/objects/Account/fields/Provider_Org_Id__c.field-meta.xml
<CustomField>
    <fullName>Provider_Org_Id__c</fullName>
    <label>Provider Org Id</label>
    <type>Text</type>
    <length>40</length>
    <externalId>true</externalId>
    <description>Id from the synthetic enrichment provider dataset (Northbeam legend), matches Zoho Accounts.Provider_Org_Id. External Id for upsert matching during import.</description>
</CustomField>